// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures basic 0 1`] = `
"class Test {
  constructor(...args) {
    this.args = args;
  }

}

const sayHello = () => {
  console.log('hello node');
};

sayHello();

if (process.env.NODE_ENV !== "production") {
  console.log('__DEV__ is true');
}

if (!(process.env.NODE_ENV !== "production")) {
  console.log('__DEV__ is false');
}
console.log(\`the answer is \${42}\`);

class Test2 extends Test {
  constructor(...args) {
    super(...args);
  }

}

const t = new Test2(1, 2, 3);
const spreadTest = { ...{
    test: 'spread'
  }
};
const foo = t.foo ?? 'default';
const operator = spreadTest?.toString();

export { foo, operator, spreadTest, t };
"
`;

exports[`fixtures basic 1 1`] = `
"import _extends from '@babel/runtime/helpers/esm/extends';
import _inheritsLoose from '@babel/runtime/helpers/esm/inheritsLoose';

var Test = function Test() {
  var _len, args, _key;

  for (_len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
    args[_key] = arguments[_key];
  }

  this.args = args;
};

var sayHello = function sayHello() {
  console.log('hello browser');
};

var _t$foo;
sayHello();

if (process.env.NODE_ENV !== "production") {
  console.log('__DEV__ is true');
}

if (!(process.env.NODE_ENV !== "production")) {
  console.log('__DEV__ is false');
}
console.log("the answer is 42");

var Test2 = /*#__PURE__*/function (_Test) {
  _inheritsLoose(Test2, _Test);

  function Test2() {
    var _len, args, _key;

    for (_len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    return _Test.call.apply(_Test, [this].concat(args)) || this;
  }

  return Test2;
}(Test);

var t = new Test2(1, 2, 3);
var spreadTest = _extends({}, {
  test: 'spread'
});
var foo = (_t$foo = t.foo) != null ? _t$foo : 'default';
var operator = spreadTest == null ? void 0 : spreadTest.toString();

export { foo, operator, spreadTest, t };
"
`;

exports[`fixtures basic 2 1`] = `
"class Test {
  constructor(...args) {
    this.args = args;
  }

}

const sayHello = () => {
  console.log('hello browser');
};

var _t$foo;
sayHello();

if (process.env.NODE_ENV !== "production") {
  console.log('__DEV__ is true');
}

if (!(process.env.NODE_ENV !== "production")) {
  console.log('__DEV__ is false');
}
console.log(\`the answer is \${42}\`);

class Test2 extends Test {
  constructor(...args) {
    super(...args);
  }

}

const t = new Test2(1, 2, 3);
const spreadTest = { ...{
    test: 'spread'
  }
};
const foo = (_t$foo = t.foo) !== null && _t$foo !== void 0 ? _t$foo : 'default';
const operator = spreadTest === null || spreadTest === void 0 ? void 0 : spreadTest.toString();

export { foo, operator, spreadTest, t };
"
`;

exports[`fixtures react 0 1`] = `
"import { render } from 'react-dom';
import { jsx } from 'react/jsx-runtime';

const Component = () => /*#__PURE__*/jsx("div", {});

render( /*#__PURE__*/jsx(Component, {}), document.getElementById('react-container'));
"
`;

exports[`fixtures react 1 1`] = `
"import { render } from 'react-dom';
import './styles.css';
import { jsx } from 'react/jsx-runtime';

const Component = () => /*#__PURE__*/jsx("div", {});

render( /*#__PURE__*/jsx(Component, {}), document.getElementById('react-container'));
"
`;

exports[`fixtures ts 0 1`] = `
"class Test {
  constructor(...args) {
    this.args = args;
  }

}

console.log(\`the answer is \${42}\`);

class Test2 extends Test {
  constructor(...args) {
    super(...args);
  }

}

class Foo {}

const t = new Test2(1, 2, 3);
t.foo = new Foo();

export { t as default };
"
`;

exports[`fixtures ts 1 1`] = `
"import _inheritsLoose from '@babel/runtime/helpers/esm/inheritsLoose';

var Test = function Test() {
  var _len, args, _key;

  for (_len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
    args[_key] = arguments[_key];
  }

  this.args = args;
};

console.log("the answer is 42");

var Test2 = /*#__PURE__*/function (_Test) {
  _inheritsLoose(Test2, _Test);

  function Test2() {
    var _len, args, _key;

    for (_len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    return _Test.call.apply(_Test, [this].concat(args)) || this;
  }

  return Test2;
}(Test);

var Foo = function Foo() {};

var t = new Test2(1, 2, 3);
t.foo = new Foo();

export { t as default };
"
`;
